# oodles

./: Cargo.toml  LICENSE  README.md  creds  oodles.conf
src/: config.rs  database.rs  form.rs  lib.rs  main.rs
tests/: test.oodle
web/: common_head.html  index.html  login.html  oodle.html  oodle.js  oodle_message.html  style.css
