[package]
name = "oodles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confindent = "2.1.0" # Configuration files
getopts = "0.2.21"   # CLI parsing
hyper = { version = "0.14", features = ["full"] }
time = { version = "0.3.9", features = ["parsing", "formatting", "macros"] }

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "fs"]