[package]
name = "oodles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confindent = "2.1.0" # Configuration files
getopts = "0.2.21"   # CLI parsing
mavourings = { path = "../mavourings", features = ["send_file", "template"] }
hyper = { version = "0.14", features = ["full"] }
time = { version = "0.3.9", features = ["parsing", "formatting", "macros", "serde"] }

argon2 = "0.4"
rand = { version = "0.8", features = ["getrandom", "std"] } # salts and session id

serde_json = "1.0.85"

camino = "1.1.1" # more pleasing Paths

[dependencies.serde]
version = "1.0.144"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "fs"]